# esp32_school_bell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TOUCHSCREEN_CHECKLIST.md  TOUCHSCREEN_IMPLEMENTATION.md  package-lock.json  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.old
.github/: copilot-instructions.md
components/AppTask/: CMakeLists.txt
components/AppTask/src/: AppTask_API.c  AppTask_API.h  AppTask_Public.h
components/FileSystem/: CMakeLists.txt
components/FileSystem/FatFS/: FatFS_API.c  FatFS_API.h
components/FileSystem/SPIFFS/: SPIFFS_API.c  SPIFFS_API.h
components/Generic/: CMakeLists.txt
components/Generic/Definitions/: AppErrors.h
components/NVS/: CMakeLists.txt
components/NVS/src/: NVS_API.c
components/RingBell/: CMakeLists.txt
components/RingBell/src/: RingBell_API.c  RingBell_API.h
components/Scheduler/: CMakeLists.txt
components/Scheduler/src/: Schedule_Data.c  Schedule_Data.h  Scheduler_API.c  Scheduler_API.h
components/TimeSync/: CMakeLists.txt
components/TimeSync/src/: TimeSync_API.c  TimeSync_API.h
components/TouchScreen/: CMakeLists.txt  README.md
components/TouchScreen/TouchScreenAPI/include/: TouchScreen_API.h
components/TouchScreen/TouchScreenAPI/src/: TouchScreen_API.c
components/TouchScreen/TouchScreen_Services/include/: TouchScreen_Services.h
components/TouchScreen/TouchScreen_Services/src/: ts_bell_service.c  ts_pin_service.c  ts_schedule_service.c  ts_setup_service.c  ts_wifi_service.c
components/TouchScreen/TouchScreen_UI_Manager/assets/: ringy_logo.c  ringy_logo.h
components/TouchScreen/TouchScreen_UI_Manager/components/button/: button_component.c  button_component.h
components/TouchScreen/TouchScreen_UI_Manager/components/card/: card_component.c  card_component.h
components/TouchScreen/TouchScreen_UI_Manager/components/input_field/: input_field_component.c  input_field_component.h
components/TouchScreen/TouchScreen_UI_Manager/components/wifi_list_item/: wifi_list_item_component.c  wifi_list_item_component.h
components/TouchScreen/TouchScreen_UI_Manager/fonts/: font_montserrat_cyrillic_12.c  font_montserrat_cyrillic_14.c  font_montserrat_cyrillic_16.c  font_montserrat_cyrillic_18.c  font_montserrat_cyrillic_20.c  font_montserrat_cyrillic_24.c  font_montserrat_cyrillic_28.c
components/TouchScreen/TouchScreen_UI_Manager/include/: TouchScreen_UI_Manager.h  TouchScreen_UI_Types.h
components/TouchScreen/TouchScreen_UI_Manager/screens/dashboard/: dashboard_screen.c  dashboard_screen.h  dashboard_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/info/: info_screen.c  info_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/pin_entry/: pin_entry_screen.c  pin_entry_screen.h  pin_entry_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/schedule_view/: schedule_view_screen.c  schedule_view_screen.h  schedule_view_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/settings/: settings_screen.c  settings_screen.h  settings_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/setup_wizard/: setup_wizard_screen.c  setup_wizard_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/splash/: splash_screen.c  splash_screen.h  splash_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/screens/wifi_setup/: wifi_setup_screen.c  wifi_setup_screen.h  wifi_setup_screen_internal.h
components/TouchScreen/TouchScreen_UI_Manager/src/: ui_config.h  ui_manager.c  ui_manager_internal.h  ui_navbar.c  ui_navbar.h  ui_statusbar.c  ui_statusbar.h  ui_strings.c  ui_strings.h  ui_theme.c  ui_theme.h  ui_types.h
components/WebServer/: CMakeLists.txt  Kconfig.projbuild  README.md
components/WebServer/src/: WS_API.c  WS_API.h  WS_EventHandlers.c  WS_EventHandlers.h  WS_Public.h
components/WebServer/src/AP/: WS_AccessPoint.c  WS_AccessPoint.h
components/WebServer/src/AP/RestAPI/: WS_WiFiConfigAPI.c  WS_WiFiConfigAPI.h
components/WebServer/src/Auth/: WS_Auth.c  WS_Auth.h  WS_AuthCrypto.c  WS_AuthCrypto.h  WS_AuthStore.c  WS_AuthStore.h
components/WebServer/src/Pages/Schedule/: WS_SchedulePage.c  WS_SchedulePage.h
components/WebServer/src/Pages/WiFiConfig/: WS_WifiConfigPage.c  WS_WifiConfigPage.h
components/WebServer/src/React/: WS_React_FileServer.c  WS_React_FileServer.h  WS_React_Routes.c  WS_React_Routes.h  Ws_React.c  Ws_React.h  Ws_React_Static.c  Ws_React_Static.h
components/WebServer/src/React/RestAPI/Credential/: CredentialAPI.c  CredentialAPI.h
components/WebServer/src/React/RestAPI/Example/: ExampleAPI.c  ExampleAPI.h
components/WebServer/src/React/RestAPI/Pin/: PinAPI.c  PinAPI.h
components/WebServer/src/React/RestAPI/Schedule/: ScheduleAPI.c  ScheduleAPI.h
components/WebServer/src/STA/: WS_Station.c  WS_Station.h
components/WiFi_Manager/: CMakeLists.txt
components/WiFi_Manager/src/: WiFI_Manager_Public.h  WiFi_Manager_API.c  WiFi_Manager_API.h
data/: CMakeLists.txt  default_schedule.json
docs/: .instructions.md  API_SPECIFICATION.md  AUTHENTICATION.md  PROJECT_STRUCTURE.md
docs/components/: AppTask.md  FileSystem.md  Generic.md  NVS.md  RingBell.md  Scheduler.md  TimeSync.md  TouchScreen.md  WebServer.md  WiFi_Manager.md
lib/AppTask/src/: AppTask_API.c
lib/FileSystem/FatFS/: FatFS_API.c  FatFS_API.h
lib/NVS/src/: NVS_API.c  NVS_API.h
lib/RingBell/: RingBell_API.c  RingBell_API.h
lib/WebServer/src/: WS_API.c  WS_AccessPoint.c  WS_EventHandlers.c  WS_EventHandlers.h  WebServer_AP.c  WebServer_AP.h  WebServer_API.c  WebServer_API.h  WebServer_Request_WiFiConfig.c  WebServer_Request_WiFiConfig.h
lib/WebServer/src/Pages/: WS_WifiConfigPage.c
lib/WebServer/src/React/: Ws_React.c
lib/WiFi_Manager/src/: WiFI_Manager_Public.h  WiFi_Manager_API.c  WiFi_Manager_API.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  ringy_logo.c
partitions/: esp32_flash_3mb_fatfs_1mb.csv
scripts/: README.md  erase_wifi_credentials.py  requirements.txt
src/: main.c
web/: README.md
(+4 files in other folders)
