idf_component_register(
    SRCS
        "src/WS_API.c"
        "src/WS_EventHandlers.c"
        "src/AP/WS_AccessPoint.c"
        "src/AP/RestAPI/WS_WiFiConfigAPI.c"
        "src/STA/WS_Station.c"
        "src/Auth/WS_Auth.c"
        "src/React/Ws_React.c"
        "src/React/WS_React_FileServer.c"
        "src/React/WS_React_Routes.c"
        "src/React/RestAPI/Example/ExampleAPI.c"
        "src/React/RestAPI/Schedule/ScheduleAPI.c"
    INCLUDE_DIRS "src"
    REQUIRES
        esp_http_server
        esp_wifi
        esp_event
        esp_timer
        nvs_flash
        json
        WiFi_Manager
        Generic
        Scheduler
        RingBell
        TimeSync
)
